# dawnlib

./: .gitignore  Cargo.toml  build.rs  change.sh  readme.md
apps/demo-app/: Cargo.toml
apps/demo-app/resources/shaders/: triangle.frag.toml
apps/demo-app/src/: main.rs  objects.rs
apps/demo-audio/: Cargo.toml
apps/demo-audio/src/: main.rs  notes.rs
apps/demo-graphics/: Cargo.toml  build.rs
apps/demo-graphics/assets/: image.toml  triangle.toml
apps/demo-graphics/assets/bins/: triangle.fsh  triangle.vsh
apps/demo-graphics/assets/shaders/: triangle.frag.glsl  triangle.fsh  triangle.toml  triangle.vsh
apps/demo-graphics/src/: chain.rs  main.rs
apps/demo-sound/: Cargo.toml
apps/demo-sound/src/: main.rs  notes.rs
crates/assets/: Cargo.toml
crates/assets/src/: binding.rs  factory.rs  hub.rs  lib.rs  pool.rs  query.rs  raw.rs  reader.rs  registry.rs
crates/assets/src/ir/: audio.rs  blob.rs  dictionary.rs  font.rs  material.rs  mesh.rs  mod.rs  notes.rs  shader.rs  texture.rs  texture2d.rs  texture_cube.rs
crates/assets/src/requests/: mod.rs  pool.rs  scheduler.rs  task.rs
crates/audio/: Cargo.toml
crates/audio/src/: assets.rs  backend.rs  lib.rs  player.rs  sample.rs
crates/audio/src/cpal/: mod.rs
crates/audio/src/dsp/: add.rs  addm.rs  copy_into_interleaved.rs  mod.rs  soft_clip.rs  soft_limit.rs  tests.rs
crates/audio/src/entities/: bus.rs  events.rs  mod.rs  sinks.rs
crates/audio/src/entities/effects/: bypass.rs  fir.rs  freeverb.rs  mod.rs  multiplexer.rs  soft_clip.rs
crates/audio/src/entities/sources/: actor.rs  midi.rs  mod.rs  multiplexer.rs  notes.rs  waveform.rs
crates/dac/: Cargo.toml
crates/dac/src/: container.rs  layout.rs  lib.rs  manifest.rs  reader.rs  writer.rs
crates/dac/src/container/: mod.rs  reader.rs  writer.rs
crates/dac/src/writer/: mod.rs  user.rs
crates/dac/src/writer/ir/: audio.rs  material.rs  mesh.rs  mod.rs  shader.rs  texture.rs
crates/dacgen/: Cargo.toml
crates/dacgen/src/: cache.rs  config.rs  deep_hash.rs  lib.rs  source.rs  user.rs
crates/dacgen/src/ir/: audio.rs  blob.rs  dictionary.rs  font.rs  material.rs  mesh.rs  mod.rs  shader.rs  texture.rs  texture2d.rs  texture_cube.rs
crates/graphics/: Cargo.toml  build.rs
crates/graphics/src/: ecs.rs  input.rs  lib.rs  renderable.rs
crates/graphics/src/gl/: assets.rs  bindings.rs  context.rs  context_glutin.rs  context_webgl.rs  debug.rs  font.rs  material.rs  mesh.rs  mod.rs  probe.rs  timer.rs
crates/graphics/src/gl/context/: mod.rs  windows.rs
crates/graphics/src/gl/entities/: array_buffer.rs  element_array_buffer.rs  material.rs  mesh.rs  mod.rs  shader.rs  shader_program.rs  texture.rs  vertex_array.rs
crates/graphics/src/gl/raii/: array_buffer.rs  element_array_buffer.rs  framebuffer.rs  mod.rs  renderbuffer.rs  shader.rs  shader_program.rs  texture.rs  ubo.rs  vertex_array.rs
crates/graphics/src/passes/: chain.rs  events.rs  mod.rs  pipeline.rs  result.rs
crates/graphics/src/renderer/: app.rs  backend.rs  cycle.rs  ecs.rs  mod.rs  monitor.rs
crates/graphics/src/view/: mod.rs
crates/graphics/src/view/darwin/: mod.rs
crates/graphics/src/view/windows/: cursor.rs  events.rs  geometry.rs  input.rs  mod.rs
crates/graphics/src/view/x11/: input.rs  mod.rs
crates/yage2-audio/: Cargo.toml
crates/yage2-audio/src/: assets.rs  backend.rs  ecs.rs  lib.rs  player.rs  resources.rs
crates/yage2-audio/src/cpal/: mod.rs
crates/yage2-audio/src/dsp/: add.rs  addm.rs  copy_into_interleaved.rs  mod.rs
crates/yage2-audio/src/entities/: bus.rs  events.rs  mod.rs  sinks.rs
crates/yage2-audio/src/entities/effects/: bypass.rs  fir.rs  freeverb.rs  mod.rs  multiplexer.rs  soft_clip.rs
crates/yage2-audio/src/entities/sources/: actor.rs  midi.rs  mod.rs  multiplexer.rs  waveform.rs
crates/yage2-core/: Cargo.toml
crates/yage2-core/src/: ecs.rs  lib.rs  profile.rs  resources.rs  sync.rs  threads.rs  time.rs  utils.rs  vec3.rs
crates/yage2-core/src/assets/: factory.rs  hub.rs  manager.rs  metadata.rs  mod.rs  raw.rs  reader.rs  registry.rs
crates/yage2-core/src/monitor/: _async.rs  mod.rs  sync.rs
crates/yage2-core/src/resources/: factory.rs  manager.rs  mod.rs  reader.rs  ref.rs  registry.rs  resource.rs
crates/yage2-graphics/: Cargo.toml  build.rs
crates/yage2-graphics/src/: application.rs  event.rs  input.rs  lib.rs  object.rs  object_collection.rs  pass.rs  renderable.rs  renderer.rs  threads.rs
crates/yage2-graphics/src/gl/: assets.rs  debug.rs  mod.rs  probe.rs
crates/yage2-graphics/src/gl/assets/: mod.rs  shader.rs
crates/yage2-graphics/src/gl/entities/: array_buffer.rs  buffers.rs  element_array_buffer.rs  mod.rs  shader.rs  shader_program.rs  texture.rs  vertex_array.rs
crates/yage2-graphics/src/passes/: chain.rs  events.rs  mod.rs  pipeline.rs  result.rs
crates/yage2-graphics/src/renderer/: backend.rs  ecs.rs  mod.rs  monitor.rs  profile.rs
crates/yage2-graphics/src/view/: mod.rs
crates/yage2-graphics/src/vulkan/: device.rs  instance.rs  mod.rs
crates/yage2-sound/: Cargo.toml
crates/yage2-sound/src/: backend.rs  control.rs  device.rs  error.rs  lib.rs  manager.rs  player.rs  resources.rs  ringbuf.rs  sample.rs
crates/yage2-sound/src/cpal/: mod.rs
crates/yage2-sound/src/dsp/: addm.rs  bus.rs  copy_into_interleaved.rs  fir.rs  math.rs  mod.rs  tests.rs
crates/yage2-sound/src/entities/: actor.rs  bus.rs  events.rs  mod.rs  multiplexers.rs  sinks.rs
crates/yage2-yarc/: Cargo.toml
crates/yage2-yarc/src/: lib.rs  manifest.rs  preprocessors.rs  reader.rs  structures.rs  writer.rs
crates/yage2-yarc/src/writer/: mod.rs  pix.rs  raw.rs  user.rs
crates/yarc/: Cargo.toml
crates/yarc/src/: lib.rs  manifest.rs  reader.rs
crates/yarc/src/writer/: ir.rs  mod.rs  pix.rs  raw.rs  user.rs
yage2/: Cargo.toml
yage2/src/: lib.rs
yage2/src/core/: mod.rs  time.rs  utils.rs
yage2/src/engine/: app_ctx.rs  application.rs  event.rs  graphics.rs  input.rs  mod.rs  object.rs  object_collection.rs  resources.rs  window.rs
yage2/src/engine/vulkan/: device.rs  graphics.rs  instance.rs  mod.rs  queue.rs
(+122 files in other folders)
