[package]
name = "yage2"
version = "0.1.0"
edition = "2021"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.1", features = ["Win32_System_LibraryLoader", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21.0"

[dependencies]
ash = "0.38"
log = "0.4.27"
ansi_term = "0.12.1"
time-format = "1.2.1"

