[package]
name = "demo-graphics"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
yage2-graphics = { path = "../../crates/yage2-graphics" }
yage2-core = { path = "../../crates/yage2-core" }
yage2-yarc = { path = "../../crates/yage2-yarc" }
yage2-audio = { path = "../../crates/yage2-audio" }
log = "0.4.27"
evenio = { version = "0.6.0", features = ["std", "rayon"] }
triple_buffer = "8.1.1"
glam = "0.30.5"