[package]
name = "demo-graphics"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
yage2-graphics = { path = "../../crates/yage2-graphics" }
yage2-core = { path = "../../crates/yage2-core" }
yage2-yarc = { path = "../../crates/yage2-yarc" }
evenio = "0.6.0"
log = "0.4.27"
glam = "0.30.5"
