[package]
name = "dawn-assets"
version = "0.1.0"
edition = "2021"

[dependencies]
dawn-ecs = { path = "../ecs" }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
crossbeam-queue = "0.3.12"
evenio = "0.6.0"
glam = "0.30.5"

[profile.release]
lto = true
opt-level = 3

[profile.dev]
lto = false
opt-level = 1