[package]
name = "dawn-assets"
version = "0.1.0"
edition = "2021"

[dependencies]
dawn-ecs = { path = "../ecs" }
thiserror = "2.0.16"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
crossbeam-channel = "0.5.11"
evenio = "0.6.0"
glam = "0.30.5"
smallvec = "1.15.1"

[profile.release]
lto = true
opt-level = 3

[profile.dev]
lto = false
opt-level = 1