[package]
name = "dawn-assets"
edition = "2021"

[features]
default = []
hub = ["dep:dawn-ecs", "dep:evenio", "dep:crossbeam-channel", "dep:smallvec"]

[dependencies]
thiserror = "2.0.16"
anyhow = "1.0.99"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
glam = "0.30.5"

dawn-ecs = { path = "../ecs", optional = true }
evenio = { version = "0.6.0", features = ["rayon"], optional = true }
smallvec = { version = "1.15.1", optional = true }
crossbeam-channel = { version = "0.5.11", optional = true }


[profile.release]
lto = true
opt-level = 3

[profile.dev]
lto = false
opt-level = 1