[package]
name = "dawn-dac"
version = "0.1.0"
edition = "2021"

[dependencies]
dawn-assets = { path = "../assets" }
thiserror = "2.0.16"
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"

# For serializing/deserializing the object in binary form
bincode = { version = "2.0.1", features = ["serde"] }
# For compressing the binary data
brotli = "8.0.2"

[profile.release]
lto = true
opt-level = 3

[profile.dev]
lto = false
opt-level = 1