[package]
name = "dawn-dac"
version = "0.1.0"
edition = "2021"

[dependencies]
dawn-assets = { path = "../assets" }
dawn-util = { path = "../util" }
thiserror = "2.0.16"
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
log = "0.4.27"

# For serializing/deserializing the object in binary form
#bitcode = { version = "0.6.7", features = ["serde"] }
bincode = { version = "2.0.1", features = ["serde"] }
# For compressing the binary data
brotli = "8.0.2"

# Always enable these optimizations for serializers and compressors
[profile.dev.package.bincode]
opt-level = 3
[profile.release.package.bincode]
opt-level = 3
[profile.dev.package.brotli]
opt-level = 3
[profile.release.package.brotli]
opt-level = 3

[profile.release]
lto = true
opt-level = 3

[profile.dev]
lto = false
opt-level = 1