[package]
name = "dawn-dacgen"
version = "0.1.0"
edition = "2021"

[features]
default = []
hash_md5 = ["dep:md5"]
hash_sha2 = ["dep:sha2"]

image_bmp = ["image/bmp"]
image_gif = ["image/gif"]
image_avif = ["image/avif"]
image_webp = ["image/webp"]

[dependencies]
dawn-dac = { path = "../dac" }
dawn-util = { path = "../util" }
dawn-assets = { path = "../assets" }
thiserror = "2.0.16"
walkdir = "2.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"

log = "0.4.27"
glam = "0.30.5"
toml = "0.9.5"
url = { version = "2.5.7", features = ["serde"] }
reqwest = { version = "0.12.23", features = [ "blocking"] }
rayon = "1.11.0"

# Hashing
blake3 = "1.3.1"
md5 = { version = "0.8.0", optional = true }
sha2 = { version = "0.10.9", optional = true, features = ["std"] }

# Assets processing
image = { version = "0.25.6", default-features = false, features = ["png", "jpeg"] }
gltf = "1.4.1"

[profile.release]
lto = true
opt-level = 3

[profile.dev]
lto = false
opt-level = 1