[package]
name = "dawn-dacgen"
edition = "2021"

[features]
default = []
hash_md5 = ["dep:md5"]
hash_sha2 = ["dep:sha2"]

image_bmp = ["image/bmp"]
image_gif = ["image/gif"]
image_avif = ["image/avif"]
image_webp = ["image/webp"]

[build-dependencies]
build-info-build = "0.0.41"

[dependencies]
dawn-dac = { path = "../dac" }
dawn-util = { path = "../util" }
dawn-assets = { path = "../assets" }
build-info = "0.0.41"
once_cell = "1.21.3"
thiserror = "2.0.16"
anyhow = "1.0.99"
walkdir = "2.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"

log = "0.4.27"
glam = "0.30.5"
toml = "0.9.5"
url = { version = "2.5.7", features = ["serde"] }
reqwest = { version = "0.12.23", features = [ "blocking"] }
rayon = "1.11.0"

# Hashing
blake3 = "1.3.1"
md5 = { version = "0.8.0", optional = true }
sha2 = { version = "0.10.9", optional = true, features = ["std"] }

# Assets processing
image = { version = "0.25.6", default-features = false, features = ["png", "jpeg"] }
gltf = "1.4.1"
rusttype = "0.9.2"
web-time = "1.1.0"

[profile.release]
lto = true
opt-level = 3

[profile.dev]
lto = false
opt-level = 1