[package]
name = "dawn-graphics"
edition = "2021"

[features]
default = ["gl"]
gl = ["dep:gl_generator", "windows/Win32_Graphics_OpenGL"]

[dependencies]
dawn-assets = { path = "../assets", features = ["hub"] }
dawn-util = { path = "../util" }
dawn-ecs = { path = "../ecs" }
log = "0.4.27"
anyhow = "1.0.99"
thiserror = "2.0.16"
crossbeam-channel = "0.5.11"
evenio = { version = "0.6.0", features = ["rayon"] }
glam = "0.30.5"
triple_buffer = "8.1.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.1", features = ["Win32_System_LibraryLoader", "Win32_Graphics_Gdi", "Win32_UI_HiDpi", "Win32_System_SystemInformation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21.0"

[build-dependencies]
gl_generator = { version = "0.14.0", optional = true }

[profile.release]
lto = true
opt-level = 3

[profile.dev]
lto = false
opt-level = 1
