[package]
name = "dawn-graphics"
edition = "2021"

[dependencies]
dawn-assets = { path = "../assets", features = ["hub"] }
dawn-util = { path = "../util" }
dawn-ecs = { path = "../ecs" }
glow = "0.16.0"
glutin = "0.32.3"
winit = "0.30.12"
log = "0.4.27"
anyhow = "1.0.99"
thiserror = "2.0.16"
crossbeam-channel = "0.5.11"
evenio = { version = "0.6.0", features = ["rayon"] }
glam = "0.30.5"
triple_buffer = "8.1.1"
foldhash = "0.2.0"

[target.'cfg(windows)'.dependencies]
glutin_wgl_sys = "0.6.1"
glutin-winit = { version = "0.5.0", features = ["wgl"] }

[target.'cfg(unix)'.dependencies]
glutin-winit = { version = "0.5.0", features = ["wayland", "x11"] }

[build-dependencies]
gl_generator = "0.14.0"

[profile.release]
lto = true
opt-level = 3

[profile.dev]
lto = false
opt-level = 1
