[package]
name = "dawn-graphics"
edition = "2021"

[dependencies]
dawn-assets = { path = "../assets", features = ["hub"] }
dawn-util = { path = "../util" }
dawn-ecs = { path = "../ecs" }
glow = "0.16.0"
winit = "0.30.12"
log = "0.4.27"
anyhow = "1.0.99"
thiserror = "2.0.16"
crossbeam-channel = "0.5.11"
evenio = "0.6.0"
glam = "0.30.5"
triple_buffer = "8.1.1"
foldhash = "0.2.0"
web-time = "1.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "0.3.78"

[target.'cfg(target_os = "windows")'.dependencies]
glutin-winit = { version = "0.5.0", features = ["wgl"] }
glutin = { version = "0.32.3", default-features = false, features = [ "wgl" ] }

[target.'cfg(target_os = "linux")'.dependencies]
glutin-winit = { version = "0.5.0", features = ["wayland", "x11"] }
glutin = { version = "0.32.3", default-features = false, features = [ "wayland", "x11", "glx" ] }

[target.'cfg(target_os = "macos")'.dependencies]
glutin-winit = { version = "0.5.0" }
glutin = { version = "0.32.3", default-features = true }

[profile.release]
lto = true
opt-level = 3

[profile.dev]
lto = false
opt-level = 1
