[package]
name = "yage2-core"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.172"
log = "0.4.27"
glam = "0.30.5"
evenio = { version = "0.6.0", features = ["std", "rayon"] }

# Used for storing, serialization and deserialization of resources
dashmap = "7.0.0-rc2"
serde = { version = "1.0.219", features = ["derive"] }

[profile.release]
lto = true
opt-level = 3

[profile.dev]
lto = false
opt-level = 1
