[package]
name = "yage2-graphics"
version = "0.1.0"
edition = "2021"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.1", features = ["Win32_System_LibraryLoader", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21.0"

[dependencies]
ash = "0.38"
log = "0.4.27"
bitflags = "2.9.1"
yage2-core = { path = "../yage2-core" }

[build-dependencies]
vergen = { version = "8.3.2", features = ["build", "cargo", "git", "gitcl", "rustc", "si"] }

[profile.release]
lto = true
opt-level = 3

[profile.dev]
lto = false
opt-level = 1
