[package]
name = "yage2-sound"
version = "0.1.0"
edition = "2021"

[features]
default = ["resources-wav", "resources-flac", "resources-ogg"]
resources-wav = ["dep:hound"]
resources-flac = ["dep:flac"]
resources-ogg = ["dep:ogg", "dep:lewton"]

[dependencies]
yage2-core = { path = "../yage2-core" }
cpal = "0.16.0"
hound = { version = "3.5.1", optional = true } # For WAV file reading/writing
flac = { version = "0.5.0", optional = true } # For FLAC file reading
ogg = { version = "0.9.2", optional = true } # For OGG file reading
lewton = { version = "0.10.0", optional = true } # For OGG Vorbis decoding
log = "0.4.27"
i24 = "2.1.0" # For 24-bit PCM support (used in WAV files)

