[package]
name = "yage2-yarc"
version = "0.1.0"
edition = "2021"

[dependencies]
yage2-core = { path = "../yage2-core" }
tar = "0.4.44"
toml = "0.8.23"
flate2 = "1.1.2"
tempdir = "0.3.7"
walkdir = "2.5.0"
md5 = "0.8.0"
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"
dirs = "6.0.0"