[package]
name = "dawn-yarc"
version = "0.1.0"
edition = "2021"

[dependencies]
dawn-assets = { path = "../assets" }
tar = "0.4.44"
toml = "0.9.5"
rmp-serde = "1.3.0"
flate2 = "1.1.2"
walkdir = "2.5.0"
image = "0.25.6"
md5 = "0.8.0"
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"

[profile.release]
lto = true
opt-level = 3

[profile.dev]
lto = false
opt-level = 1