[package]
name = "dawn-yarc"
version = "0.1.0"
edition = "2021"

[dependencies]
dawn-assets = { path = "../assets" }
tar = "0.4.44"
flate2 = "1.1.2"

toml = "0.9.5"
rmp-serde = "1.3.0"
walkdir = "2.5.0"
md5 = "0.8.0"
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"
glam = "0.30.5"

image = "0.25.6" # For parsing image files
easy-gltf = { version = "1.1.5", features = ["extras"] } # For parsing glTF files

[profile.release]
lto = true
opt-level = 3

[profile.dev]
lto = false
opt-level = 1